# Rust3dAimTrainer

./: .gitignore  Cargo.toml  INSTALL.md  README.md  build.rs
src/: config.toml  dev_config.toml  main.rs  todo.txt
src/engine/: camera.rs  consts.rs  helpers.rs  input.rs  mod.rs  renderer.rs  runtime.rs  scenarios.rs  shapes.rs  structures.rs  targets.rs  window.rs
src/engine/core/: config.rs  error.rs  matrix.rs  mesh.rs  mod.rs  triangle.rs  vector.rs
src/engine/rendering/: cli.rs  clipping.rs  color.rs  gui.rs  helpers.rs  mod.rs  print.rs  projection.rs  rasterizer.rs  window.rs
src/engine/scenario/: gun.rs  mod.rs  scenario.rs  scene.rs  stats.rs  target.rs
