[package]
name = "Rust3dAimTrainer"
version = "1.0.0"
edition = "2021"

[dependencies]
winit = "0.29"
softbuffer = "0.4"
rand = "0.8"
serde = { version="1.0.228", features = ["derive"] }
toml = "0.9.8"
once_cell = "1.21.3"
rodio = "0.21.1"
thiserror = "2.0.17"
png = "0.18.0"
supports-color = "3.0.2"


